# rustix-uring

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  rust.yml
examples/: readme.rs  tcp_echo.rs
io-uring-bench/: Cargo.toml
io-uring-bench/src/: iai_new_nop.rs  iovec.rs  nop.rs
io-uring-test/: Cargo.toml  default.nix
io-uring-test/src/: main.rs  utils.rs
io-uring-test/src/tests/: cancel.rs  epoll.rs  fs.rs  futex.rs  mod.rs  net.rs  poll.rs  queue.rs  register.rs  register_buf_ring.rs  register_buffers.rs  register_sync_cancel.rs  regression.rs  timeout.rs  waitid.rs
src/: cqueue.rs  lib.rs  opcode.rs  register.rs  squeue.rs  submit.rs  types.rs  util.rs
