[package]
name = "rustix-uring"
version = "0.1.1"
authors = ["Jordan Isaacs <mail@jdisaacs.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/jordanisaacs/rustix-uring"
homepage = "https://github.com/jordanisaacs/rustix-uring"
documentation = "https://docs.rs/rustix-uring"
description = "The low-level `io_uring` userspace interface for Rust (with Rustix)"
categories = [ "asynchronous", "network-programming", "filesystem" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = ["/flake.*", ".envrc"]
members = [ "io-uring-test", "io-uring-bench" ]

[features]
default = ["std"]
std = ["rustix/std"]

[dependencies]
libc = { version = "0.2.98", default-features = false }
rustix = { version = "0.38", default-features = false, features = ["io_uring", "mm", "time"] }

[dev-dependencies]
anyhow = "1"
socket2 = "0.5"
slab = "0.4"
