[package]
name = "io-uring"
version = "0.6.2"
authors = ["quininer <quininer@live.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/io-uring"
homepage = "https://github.com/tokio-rs/io-uring"
documentation = "https://docs.rs/io-uring"
description = "The low-level `io_uring` userspace interface for Rust"
categories = [ "asynchronous", "network-programming", "filesystem" ]
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = []
members = [ "io-uring-test", "io-uring-bench" ]

[features]
default = ["std"]
std = ["rustix/std", "bitflags/std"]

[dependencies]
bitflags = { version = "2.4.0", default-features = false }
rustix = { version = "0.38.18", default-features = false, features = ["io_uring", "mm"] }

[dev-dependencies]
libc = "0.2.98"
anyhow = "1"
socket2 = "0.5"
slab = "0.4"
