[package]
name = "rustix-uring"
version = "0.6.0"
authors = ["Jordan Isaacs <mail@jdisaacs.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jordanisaacs/rustix-uring"
homepage = "https://github.com/jordanisaacs/rustix-uring"
documentation = "https://docs.rs/rustix-uring"
description = "The low-level `io_uring` userspace interface for Rust"
categories = [ "asynchronous", "network-programming", "filesystem" ]
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = ["/flake.*", ".envrc"]
members = [ "io-uring-test", "io-uring-bench" ]

[dependencies]
bitflags = { version = "2.4.0", default-features = false }
rustix = { version = "1.0.2", default-features = false, features = ["io_uring", "mm", "thread"] }

[dev-dependencies]
libc = "0.2.98"
anyhow = "1"
rustix = "1.0.2"
socket2 = "0.5"
slab = "0.4"

[patch.crates-io]
linux-raw-sys = { git = "https://github.com/silvanshade/linux-raw-sys", branch = "io_uring-zcrx" }
rustix = { git = "https://github.com/silvanshade/rustix", branch = "linux-6.15-io_uring" }
