[package]
name = "io-uring-bench"
version = "0.5.0"
authors = ["Jordan Isaacs <mail@jdisaacs.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = { path = "..", package = "rustix-uring" }
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "nop"
path = "src/nop.rs"
harness = false

[[bench]]
name = "iovec"
path = "src/iovec.rs"
harness = false
