[package]
name = "io-uring-test"
version = "0.6.0"
authors = ["Jordan Isaacs <mail@jdisaacs.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = { path = "..", package = "rustix-uring" }
libc = { version = "0.2", features = [ "extra_traits" ] }
rustix = { version = "1.0.2", features = ["fs"] }
anyhow = "1"
tempfile = "3"
once_cell = "1"
socket2 = "0.5"

[features]
ci = []
